# SteamSearch

./: .gitattributes  .gitignore  CLI.cpp  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  Game.h  README.md  RapidFuzzie.cpp  algorithms_B.h  main.cpp
Legacy/: CLI.cpp  CMakeLists.txt  Game.cpp  Game.h  README.md  RapidFuzzie.h  algorithms_B.cpp  cosineSimilarity.cpp  main.cpp  minHash.h  multiFeatureSimilarity.h  readJson.cpp
frontend/: index.html
frontend/src/: App.css  App.jsx  Navbar.css  Navbar.jsx  index.css
public/: index.html
src/: CompactGame.h  converter.cpp  mainServer.cpp
